--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>B.E. Foods</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+<script type="text/javascript">
+(function() {
+  if (location.protocol != 'https:') {
+    location.href = 'https:' + window.location.href.substring(window.location.protocol.length)
+  }
+})()
+</script>
 <style type="text/css">
   html {
     -webkit-font-smoothing: antialiased;
