--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>B.E. Foods</title>
+<meta name="google-site-verification" content="jZsFp1qkhdUS6BZM2n-qP-PyAC6-ud3v4o1VlLPNxJs" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
 <script type="text/javascript">
 (function() {
